# WeddingWebsite

./: .gitignore  .prettierrc  CNAME  README.md  encrypted_info.json  envelope_keys.json  enveloped_keys.json  index.html  index.js  moreinfo.html  rsvp.html  rsvp.js  savethedate.html  shower.html  style.css
crypto/: encrypt_file_with_data_key.js  generate_data_key.js  generate_envelope_keys.js  util.js
photo/: Cargo.toml
photo/src/: main.rs
photo/tf/: api_gateway.tf  lambda.tf  outputs.tf  s3.tf  terraform.tf  variables.tf
rsvp/: Cargo.toml
rsvp/src/: guest_list.rs  guests.csv  handler.rs  main.rs  name_searcher.rs
rsvp/tf/: dynamodb.tf  iam.tf  lambda.tf  outputs.tf  s3.tf  terraform.tf  variables.tf
scripts/: rsvp_summary.py
server/rsvp/: Cargo.toml
server/rsvp/src/: guests.csv  handler.rs  main.rs  store.rs
server/src/: lambda_get_rsvp.js  lambda_put_rsvp.js
server/tf/: .gitignore  README.md  api_gateway.tf  dynamodb.tf  lambda.tf  outputs.tf  terraform.tf  variables.tf
style/: savethedate.css  style.css
website/: accommodations.html  activities.html  encrypted_info.json  gallery.html  index.html  moreinfo.html  registry.html  rsvp.html  rsvp.js  rsvp_form.js  rsvp_plaintext.html  rsvp_search.html  rsvp_submit.html  rsvp_submit.js  shower.html
website/js/: index.js  rsvp.js  rsvp_app.js
website/style/: rsvp_form.css  style.css
